--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 </div>
                 <nav class="nav">
                     <a class="nav__link" href="https://vk.com/jeka7193">
-                        <img src="../Active_box/icon/вк.png" width="75" height="75" alt=""></a>
+                        <img src="../website-business-card/icon/вк.png" width="75" height="75" alt=""></a>
                     <a class="nav__link" href="https://www.instagram.com/jekson7193/">
-                        <img src="../Active_box/icon/Instagram.png" width="75" height="75" alt=""></a>
+                        <img src="../website-business-card/icon/Instagram.png" width="75" height="75" alt=""></a>
                     <a class="nav__link" href="https://github.com/Jekarus">
-                        <img src="../Active_box/icon/GitHub.png" width="75" height="75" alt=""></a>
+                        <img src="../website-business-card/icon/GitHub.png" width="75" height="75" alt=""></a>
                 </nav>
             </div>
         </div>
